--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# This .env file is used to store environment variables for the build process
+# NOT for configuring the container at runtime
 DOCKERHUB_USER=correctomatic
 IMAGE_NAME=api
 IMAGE_TAG=0.0.1
